{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 320,
  "lineage": "46451972-d0a4-8585-a33f-bb3124c98654",
  "resources": [
    {
      "module": "module.internetGateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335572649:internet-gateway/igw-032e29e3ade30a8bf",
            "id": "igw-032e29e3ade30a8bf",
            "owner_id": "730335572649",
            "tags": {
              "Name": "k8s-igw"
            },
            "tags_all": {
              "Name": "k8s-igw"
            },
            "vpc_id": "vpc-0e540329ade579713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f41ed4ce904601a7",
            "domain": "vpc",
            "id": "eipalloc-0f41ed4ce904601a7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-28-93-177.compute-1.amazonaws.com",
            "public_ip": "100.28.93.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s_nat_eip"
            },
            "tags_all": {
              "Name": "k8s_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k8s_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f41ed4ce904601a7",
            "association_id": "eipassoc-0b1d22ccbb11fcb1e",
            "connectivity_type": "public",
            "id": "nat-0cfacae32976e122b",
            "network_interface_id": "eni-0307b90554a75ab8b",
            "private_ip": "192.168.1.88",
            "public_ip": "100.28.93.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005166c954e0e623c",
            "tags": {
              "Name": "k8s-natgw"
            },
            "tags_all": {
              "Name": "k8s-natgw"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_eip",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335572649:route-table/rtb-00f1aa51b64b7f898",
            "id": "rtb-00f1aa51b64b7f898",
            "owner_id": "730335572649",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfacae32976e122b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_private"
            },
            "tags_all": {
              "Name": "rt_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e540329ade579713"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgateway.aws_eip.nat_eip",
            "module.natgateway.aws_nat_gateway.k8s_natgw",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335572649:route-table/rtb-00ce91427ae1e7061",
            "id": "rtb-00ce91427ae1e7061",
            "owner_id": "730335572649",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032e29e3ade30a8bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_public"
            },
            "tags_all": {
              "Name": "rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e540329ade579713"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internetGateway.aws_internet_gateway.k8s_igw",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdf312701cc33741",
            "route_table_id": "rtb-00f1aa51b64b7f898",
            "subnet_id": "subnet-08ed8457bb2cda93d"
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_eip",
            "module.natgateway.aws_nat_gateway.k8s_natgw",
            "module.routeTable.aws_route_table.rt_private",
            "module.subnet.aws_subnet.subnet_private",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.routeTable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0097a8bdd4f9585",
            "route_table_id": "rtb-00ce91427ae1e7061",
            "subnet_id": "subnet-005166c954e0e623c"
          },
          "dependencies": [
            "module.internetGateway.aws_internet_gateway.k8s_igw",
            "module.routeTable.aws_route_table.rt_public",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335572649:subnet/subnet-08ed8457bb2cda93d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ed8457bb2cda93d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335572649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private"
            },
            "tags_all": {
              "Name": "subnet_private"
            },
            "vpc_id": "vpc-0e540329ade579713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335572649:subnet/subnet-005166c954e0e623c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005166c954e0e623c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335572649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public"
            },
            "tags_all": {
              "Name": "subnet_public"
            },
            "vpc_id": "vpc-0e540329ade579713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335572649:vpc/vpc-0e540329ade579713",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00992ed10a7f705c5",
            "default_route_table_id": "rtb-02cfcc0902e4e6ea0",
            "default_security_group_id": "sg-0a8c32ed5be5470a2",
            "dhcp_options_id": "dopt-05e11f96851feb30e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e540329ade579713",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02cfcc0902e4e6ea0",
            "owner_id": "730335572649",
            "tags": {
              "Name": "vpc_k8s"
            },
            "tags_all": {
              "Name": "vpc_k8s"
            }
          }
        }
      ]
    }
  ]
}